# neko

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: error.rs  gateway.rs  lib.rs  main.rs  session.rs
src/agent/: context.rs  loop_runner.rs  mod.rs
src/api/: mod.rs
src/channels/: mod.rs  telegram.rs
src/config/: mod.rs
src/cron/: mod.rs
src/llm/: client.rs  mod.rs  types.rs
src/mcp/: mod.rs
src/skills/: mod.rs
src/tools/: cd.rs  cron_manage.rs  exec.rs  http_request.rs  list_files.rs  memory_flush.rs  memory_replace.rs  memory_search.rs  mod.rs  process.rs  process_manager.rs  read_file.rs  run_python.rs  send_file.rs  write_file.rs
